--- a/AdventCode1.fsproj
+++ b/AdventCode1.fsproj
@@ -10,6 +10,7 @@
         <Content Include="data.txt">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
+        <Content Include=".gitignore" />
     </ItemGroup>
 
 </Project>
