--- a/AdventCode1.fsproj
+++ b/AdventCode1.fsproj
@@ -20,6 +20,9 @@
         <Content Include="cleanup.txt">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
+        <Content Include="craneData.txt">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
     </ItemGroup>
 
 </Project>
