--- a/AdventCode1.fsproj
+++ b/AdventCode1.fsproj
@@ -23,6 +23,9 @@
         <Content Include="craneData.txt">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
+        <Content Include="dataStream.txt">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
     </ItemGroup>
 
 </Project>
