--- a/AdventCode1.fsproj
+++ b/AdventCode1.fsproj
@@ -26,6 +26,9 @@
         <Content Include="dataStream.txt">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
+        <Content Include="commands.txt">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
     </ItemGroup>
 
 </Project>
