AOC Day 8(a) complete

--- a/AdventCode1.fsproj
+++ b/AdventCode1.fsproj
@@ -29,6 +29,9 @@
         <Content Include="commands.txt">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
+        <Content Include="trees.txt">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
     </ItemGroup>
 
 </Project>
