--- a/AdventCode1.fsproj
+++ b/AdventCode1.fsproj
@@ -6,6 +6,14 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <Compile Include="Day 1.fs" />
+        <Compile Include="Day 2.fs" />
+        <Compile Include="Day 3.fs" />
+        <Compile Include="Day 4.fs" />
+        <Compile Include="Day 5.fs" />
+        <Compile Include="Day 6.fs" />
+        <Compile Include="Day 7.fs" />
+        <Compile Include="Day 8.fs" />
         <Compile Include="Program.fs" />
         <Content Include="calories.txt">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
