--- a/AdventCode1.fsproj
+++ b/AdventCode1.fsproj
@@ -41,6 +41,9 @@
         <Content Include="trees.txt">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
+        <Content Include="bridge.txt">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
     </ItemGroup>
 
 </Project>
