--- a/AdventCode1.fsproj
+++ b/AdventCode1.fsproj
@@ -17,6 +17,7 @@
         <Compile Include="Day 9(a).fs" />
         <Compile Include="Day 9(b).fs" />
         <Compile Include="Day 10.fs" />
+        <Compile Include="Day 11.fs" />
         <Compile Include="Program.fs" />
         <Content Include="calories.txt">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
